# opm-flowgeomechanics

./: .clang-format  .gitignore  CMakeLists.txt  CMakeLists_files.cmake  README.md  build.sh  dune.module  opm-flowgeomechanics-prereqs.cmake  opm-geomechancis-prereqs.cmake
.github/actions/install-opm-dependencies/: action.yml
.github/workflows/: ci-tests.yml  copilot-setup-steps.yml
cmake/Modules/: Finddune-foamgrid.cmake  Finddune-pdelab.cmake  Finddune-typetree.cmake
data/: SIMPLE_MECH_NX_11_NY_11_NZ_25.DATA  SIMPLE_MECH_NX_11_NY_11_NZ_25_FRAC_RESET.DATA  SIMPLE_MECH_nx_11_ny_11_nz_25_FRAC.DATA  SIMPLE_MECH_nx_11_ny_11_nz_25_FRAC_SEQ.DATA  SPE1CASE2_MECH.DATA  SPE1CASE2_MECH_MINI.DATA  SPE1CASE2_MECH_MINI_1C.DATA  SPE1CASE2_MECH_MINI_2x2.DATA  amgmechsolverhypre_geosxcpu_new_nv.json  fracture_simple_bhp_seq_nverbose.json  fracture_simple_rate_seq_nverbose.json  fractureparam.json  mechsolver.json  myparamsfrac.ini  myparamsfrac_frac.ini  ptestpoints2.txt
data/MECHTEST/: ACTNUM.TXT  BLACKOILTHERMAL_BC.DATA  BLACKOILTHERMAL_BC_HWELL.DATA  COORD.TXT  DATUM.TXT  DEPTH.TXT  DX.TXT  DY.TXT  DZ.TXT  EQUIL.TXT  NNC.TXT  ONEPHASETHERMAL.DATA  ONEPHASETHERMAL_BC.DATA  PERMX.TXT  PERMY.TXT  PERMZ.TXT  PORO.TXT  PORV.TXT  PRESSURE.TXT  PVTW.TXT  SCHEDULE.TXT  SCHEDULE_HWELL.TXT  TOPS.TXT  TRANX.TXT  ZCORN.TXT
data/generated_testdata/: irregular_ellipse.lop  irregular_ellipse.lop~  output.lop  oval.m
data/json/: amgmechsolver.json  fractureparam.json  fractureparam_3x3x3.json  fractureparam_blackoil.json  fractureparam_blackoil_rate.json  fractureparam_lykke.json  fractureparam_lykke_odd.json  fractureparam_min.json  mechsolverilu0.json
data/opm-simulation-references/REGTEST_geomech/flow_energy_geomech/: SIMPLE_MECH_NX_11_NY_11_NZ_25-00001.vtu  SIMPLE_MECH_NX_11_NY_11_NZ_25-00002.vtu  SIMPLE_MECH_NX_11_NY_11_NZ_25-00003.vtu  SIMPLE_MECH_NX_11_NY_11_NZ_25-00004.vtu  SIMPLE_MECH_NX_11_NY_11_NZ_25.DBG  SIMPLE_MECH_NX_11_NY_11_NZ_25.PRT  SIMPLE_MECH_NX_11_NY_11_NZ_25.SMSPEC  SIMPLE_MECH_NX_11_NY_11_NZ_25.UNSMRY  SIMPLE_MECH_NX_11_NY_11_NZ_25.pvd
data/opm-simulation-references/REGTEST_geomech_frac/flow_energy_geomech/: SIMPLE_MECH_NX_11_NY_11_NZ_25_FRAC.DBG  SIMPLE_MECH_NX_11_NY_11_NZ_25_FRAC.EGRID  SIMPLE_MECH_NX_11_NY_11_NZ_25_FRAC.PRT  SIMPLE_MECH_NX_11_NY_11_NZ_25_FRAC.UNSMRY
data/opm_cases/simplebox_mydeck_nx1_ny_1_nz_1/: ACTNUM.TXT  BCCON.TXT  BIOTCOEF.TXT  COORD.TXT  DENSITY.TXT  PERMX.TXT  PERMY.TXT  PERMZ.TXT  POELCOEF.TXT  PORO.TXT  PRATIO.TXT  PVDG.TXT  PVDO.TXT  PVTW.TXT  SCHEDULE.TXT  SIMPLEBOX_MYDECK_NX1_NY_1_NZ_1.DATA  SIMPLEBOX_MYDECK_NX1_NY_1_NZ_1.DATA~  THCONR.TXT  THELCOEF.TXT  THERMEXR.TXT  YMODULE.TXT  ZCORN.TXT
data/opm_cases/simplebox_mydeck_nx3_ny_3_nz_1/: ACTNUM.TXT  BCCON.TXT  BIOTCOEF.TXT  COORD.TXT  PERMX.TXT  PERMY.TXT  PERMZ.TXT  POELCOEF.TXT  PORO.TXT  PRATIO.TXT  RPTRST.TXT  SCHEDULE.TXT  SIMPLEBOX_MYDECK_NX3_NY_3_NZ_1.DATA  THCONR.TXT  THELCOEF.TXT  THERMEXR.TXT  YMODULE.TXT  ZCORN.TXT
data/opm_cases/simplebox_mydeck_nx3_ny_3_nz_3/: ACTNUM.TXT  BCCON.TXT  BIOTCOEF.TXT  PERMX.TXT  PERMY.TXT  PERMZ.TXT  POELCOEF.TXT  PORO.TXT  PRATIO.TXT  SCHEDULE.TXT  SGOF.TXT  SIMPLEBOX_MYDECK_NX3_NY_3_NZ_3.DATA  SIMPLEBOX_MYDECK_NX3_NY_3_NZ_3.DATA~  SPECHEAT.TXT  SPECROCK.TXT  STREQUIL.TXT  STREQUIL.TXT~  SWOF.TXT  THCONR.TXT  THELCOEF.TXT  THERMEXR.TXT  YMODULE.TXT  ZCORN.TXT
data/opm_cases/simplebox_mydeck_nx5_ny_5_nz_5/: ACTNUM.TXT  BCCON.TXT  BIOTCOEF.TXT  COORD.TXT  PERMX.TXT  PERMY.TXT  PERMZ.TXT  POELCOEF.TXT  PORO.TXT  PRATIO.TXT  RPTSOL.TXT  RTEMPVD.TXT  SCHEDULE.TXT  SIMPLEBOX_MYDECK_NX5_NY_5_NZ_5.DATA  THCONR.TXT  THELCOEF.TXT  THERMEXR.TXT  YMODULE.TXT  ZCORN.TXT
data/param_files/: param_blackoil_test.param  param_lykke_test.param
docopm/: BIOTCOEF.fodt  POELCOEF.fodt  PRATIO.fodt  STREQUIL.fodt  STRESSEQUILNUM.fodt  THELCOEF.fodt  THERMEXP.fodt  WINJCLN.fodt  WINJDAM.fodt  WINJFCNC.fodt  YMODULE.fodt  extra.txt  pwri-toc.md
docopm/modelling/: BIOTCOEF.md  CSTRESS.md  FRAC.md  MECH.md  POELCOEF.md  PRATIO.md  STREQUIL.md  STRESSEQUILNUM.md  THELCOEF.md  THERMEXR.md  WSEED.md  YMODULE.md  intro.md
docopm/reporting/: filtercake.md  fracturing.md  geomechanics.md  intro.md
examples/: FlexibleSolverMech.cpp  MechTypeTag.hpp  coupled_standalone_test.cpp  example_penny_crack_ddm.cpp  flow_energy_geomech.cpp  flow_energy_geomech_polygrid.cpp  flow_experimental.cpp  flow_geomech.cpp  gridtest.cpp  make_test_disk.cpp  makedisk.cpp  padmodel.cpp  paramtest.cpp  plot_reservoir_vtk.cpp  reference_test_data.hpp  single_fracture_sim.cpp  standalone_sim_test.cpp  test_convex_boundary.cpp  test_ddm_assembly.cpp  test_elasticity.cpp  test_foamgrid.cpp  test_fracture.cpp  test_fracture_pressure_ad.cpp  test_grid.cpp  test_gridstretch.cpp  test_parallelgrid.cpp  test_parallelgrid_grdecl.cpp  test_patch_recovery.cpp  test_trimesh.cpp  test_vem_assembly.cpp  test_vem_elements.cpp  testpdelab.cpp  vectorfunctions.hh
opm/geomech/: BlackoilGeomechWellModel.hpp  BlackoilModelGeomech.hpp  CGAL_helper.cpp  CGAL_helper.hpp  CutDe.cpp  CutDe.hpp  DiagonalScalar.hpp  DiscreteDisplacement.cpp  DiscreteDisplacement.hpp  DuneCommunicationHelpers.hpp  FlexibleSolverMech.cpp  FlowGeomechLinearSolverParameters.hpp  Fracture.cpp  Fracture.hpp  FractureMechanicsPreconditioner.cpp  FractureMechanicsPreconditioner.hpp  FractureModel.cpp  FractureModel.hpp  FractureModel_impl.hpp  FracturePressureAssemblerAD.hpp  FractureWell.cpp  FractureWell.hpp  Fracture_fullSystemIteration.cpp  Fracture_impl.hpp  GeometryHelpers.cpp  GeometryHelpers.hpp  GridStretcher.cpp  GridStretcher.hpp  Math.hpp  RegularTrimesh.cpp  RegularTrimesh.hpp  boundaryutils.hh  convex_boundary.hpp  coupledsolver.cpp  coupledsolver.hpp  dune_utilities.hpp  eclgeomechmodel.hh  eclproblemgeomech.hh  elasticity_solver.hpp  elasticity_solver_impl.hpp  (+5 more)
opm/geomech/vem/: test_topology.cpp  topology.cpp  topology.hpp  vem.cpp  vem.hpp  vemutils.cpp  vemutils.hpp
tests/: run-mechRegressionTest.sh
(+38 files in other folders)
